<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/imgBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgArtist"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/stroke"
            android:contentDescription="@string/imgArtist"
            android:src="@drawable/artist" />

        <ImageView
            android:id="@+id/txtArtist"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/txtArtist"
            android:src="@drawable/wolf" />


    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="250dp"

        android:layout_height="2dp"
        android:layout_above="@+id/imgLogo"
        android:layout_alignStart="@+id/imgLogo"
        android:layout_alignLeft="@+id/imgLogo"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginBottom="-8dp"
        android:background="@color/colorAccent" />
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="129dp"
        android:contentDescription="@string/imgLogo"
        android:paddingStart="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        app:srcCompat="@drawable/logo" />

</RelativeLayout>