<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicPlayer">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/imgBackground"
        android:scaleType="centerCrop"
        android:src="@drawable/background"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp">

        <ImageView
            android:id="@+id/imgSong1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/disc" />

        <TextView
            android:id="@+id/txtTitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/txtTitle1"
            android:textColor="#3fd3ee"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/btnBackward1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="#00ffffff"
                android:src="@drawable/backward" />

            <ImageButton
                android:id="@+id/btnPlay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:src="@drawable/play" />

            <ImageButton
                android:id="@+id/btnForward1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="#00ffffff"
                android:src="@drawable/forward" />

            </LinearLayout>

        <ImageView
            android:id="@+id/imgSong2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:src="@drawable/disc" />

        <TextView
            android:id="@+id/txtTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/txtTitle2"
            android:textColor="#3fd3ee"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageButton
                android:id="@+id/btnBackward2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="#00ffffff"
                android:src="@drawable/backward" />

            <ImageButton
                android:id="@+id/btnPlay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ffffff"
                android:src="@drawable/play" />

            <ImageButton
                android:id="@+id/btnForward2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:background="#00ffffff"
                android:src="@drawable/forward" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>